<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="horizontal">

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/buttons_layout_1"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="80dp">

        <Button
            android:id="@+id/pairs_bt"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/pairs"
            android:textAlignment="center"
            android:background="@drawable/rounded_corners_accent">
        </Button>
        <Button
            android:id="@+id/sizes_bt"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/sizes"
            android:textAlignment="center"
            android:background="@drawable/rounded_corners_accent">
        </Button>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/buttons_layout_center"
        android:layout_width="0dp"
        android:layout_weight="3"
        android:background="@color/colorPrimary"
        android:layout_height="80dp">

        <EditText
            android:id="@+id/pattern_hint_et"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/rounded_corners"
            android:hint="@string/patterns_hint"
            android:textAlignment="center">
        </EditText>
        <Button
            android:id="@+id/add_pattern_bt"
            android:layout_marginTop="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_pattern"
            android:textAlignment="center"
            android:background="@drawable/rounded_corners_accent">
        </Button>

    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/buttons_layout_2"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="80dp">
        <Button
            android:id="@+id/pair_bt"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/single"
            android:textAlignment="center"
            android:background="@drawable/rounded_corners_accent">
        </Button>
        <Button
            android:id="@+id/size_bt"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/small"
            android:textAlignment="center"
            android:background="@drawable/rounded_corners_accent">
        </Button>
    </LinearLayout>


</LinearLayout>